# url-shortener

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
.cargo/: audit.toml
.github/workflows/: ci.yaml
.sqlx/: query-2c1ba413ac4985e42553223c2c88f9ddce6ef906a4c118ca0328ac9bb031cec2.json  query-36354e81911e6eae78b589186ef266b486b25255728e9de90025415f8b194ff3.json  query-772d040e299052db1b4ce11c3e0e06cb339e82ebc210bd53e4219e5f4f869c90.json  query-c1ba9397874b1fd4e2111aaae82efb9f4132ede8fb9bb52eb035a712a4f76aca.json  query-d6af2b809a9084375de207110a727c18d603c8fe59fbec8386e3429ec735d4d4.json  query-f1cad9b1749a88c4230652a113f6570ef7a2f4da1ebdce2d94593ed1004ac97f.json
argocd/: applicationset.yaml
crates/analytics-service/: Cargo.toml
crates/analytics-service/src/: config.rs  main.rs
crates/analytics-service/src/consumer/: access_event_consumer.rs  mod.rs
crates/analytics-service/src/repository/: analytics_repository.rs  mod.rs
crates/analytics-service/src/routes/: analytics.rs  health.rs  mod.rs
crates/shortener-core/: Cargo.toml
crates/shortener-core/src/: config.rs  error.rs  lib.rs  rabbitmq.rs  telemetry.rs
crates/shortener-core/src/messaging/: events.rs  mod.rs
crates/shortener-service/: Cargo.toml
crates/shortener-service/migrations/: 20240101000000_init.sql
crates/shortener-service/src/: config.rs  main.rs
crates/shortener-service/src/publisher/: access_event_publisher.rs  mod.rs
crates/shortener-service/src/repository/: mod.rs  url_repository.rs
crates/shortener-service/src/routes/: health.rs  mod.rs  redirect.rs  urls.rs
docker/: Dockerfile  compose.yaml  otel-collector-config.yaml
docs/: infrastructure.md
infra/: README.md
infra/argocd/: applicationset.yaml  root-app.yaml
infra/argocd/apps/: url-shortener.yaml
infra/argocd/apps/operators/: cloudnative-pg.yaml  jaeger-operator.yaml  longhorn.yaml  rabbitmq-operator.yaml  redis-operator.yaml  sealed-secrets.yaml
infra/cloud-init/: base.yaml  master.yaml  worker.yaml
infra/docs/: argocd-setup.md  coredns-setup.md  gateway-api.md  github-actions-runner-setup.md  k8s-resources.md  network-flow.md  tailscale-setup.md
infra/example/: nginx.yaml
infra/k8s/: coredns-external-service.yaml
infra/runner-image/: Dockerfile  values.yaml
infra/scripts/: install-metallb.sh  render-cloud-init.sh
k8s/base/: kustomization.yaml  namespace.yaml
k8s/base/analytics-service/: deployment.yaml  httproute.yaml  kustomization.yaml  pdb.yaml  service.yaml
k8s/base/gateway/: gateway.yaml
k8s/base/observability/: elasticsearch.yaml  jaeger.yaml  kibana.yaml  kustomization.yaml  otel-collector.yaml
k8s/base/postgres/: cluster.yaml
k8s/base/rabbitmq/: rabbitmq.yaml
k8s/base/redis/: headless-service.yaml  kustomization.yaml  redis.yaml
k8s/base/secrets/: README.md  kustomization.yaml  sealed-secrets.yaml
k8s/base/shortener-service/: deployment.yaml  httproute.yaml  ingress.yaml  kustomization.yaml  pdb.yaml  service.yaml
k8s/helm/: install-operators.sh
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml  redis-patch.yaml
k8s/overlays/prod/: httproute-patch.yaml  ingress-patch.yaml  kustomization.yaml  postgres-patch.yaml  rabbitmq-patch.yaml  redis-patch.yaml
k8s/overlays/staging/: analytics-httproute-patch.yaml  httproute-patch.yaml  ingress-patch.yaml  kustomization.yaml  postgres-patch.yaml  rabbitmq-patch.yaml  redis-patch.yaml  staging-sealed-postgres-credentials.yaml  staging-sealed-rabbitmq-credentials.yaml  staging-sealed-url-shortener-secrets.yaml
scripts/: test-api.sh
