[package]
name = "shortener-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "shortener-service"
path = "src/main.rs"

[dependencies]
shortener-core.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
lapin.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serviceconf.workspace = true
saferet.workspace = true
url.workspace = true
rand.workspace = true
dotenvy.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockall.workspace = true

[lints]
workspace = true
